Added photos and adjusted header

--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
     <section class="hero" id="about">
         <div class="container grid">
             <div class="hero-square">
-                <img src="Untitled-16.svg" />
+                <img src="Untitled-16.svg" class="img-hor"/>
             </div>
             <div class="hero-text hello-small-text">
                 <h1>Hi I'm Inessa</h1>
-                <p>I love making things. I learned how to code almost one year ago when the pandemic started. In my free time I like to crochet & teach others how to do it too!</p>
+                <p>I love making things. I learned how to code almost one year ago when the pandemic started. In my free time I like to crochet and create patterns that I sell on Etsy.</p>
                 <div class="icon-bar">
                     <a href="https://www.instagram.com/picotpals/?hl=en">
                         <img src="iconfinder_Rounded_Instagram_svg_5282544.svg" alt="">
@@ -63,21 +63,18 @@
                 <img src="Untitled_Artwork 29.png">
                 <div class="card-text">
                     <h3>Turn of The Century tiles</h3>
-                    <p>hand lettering</p>
                 </div>
             </div>
             <div class="card">
-                <img src="forest-5855196_1280.jpg">
+                <img src="raccoon.png">
                 <div class="card-text">
-                    <h3>Project Name</h3>
-                    <p>category</p>
+                    <h3>Faux Lino Raccoon Print</h3>
                 </div>
             </div>
             <div class="card">
-                <img src="forest-5855196_1280.jpg">
+                <img src="magic frog.png">
                 <div class="card-text">
-                    <h3>Project Name</h3>
-                    <p>category</p>
+                    <h3>Frog Magic</h3>
                 </div>
             </div>
             
