smaller images to replace large ones

--- a/index.html
+++ b/index.html
@@ -53,26 +53,26 @@
         </div>
         <div class="container grid">
             <div class="card">
-                <img src="IMG_1071.PNG">
+                <img src="lichen.jpg">
                 <div class="card-text">
                     <h3>Lichen Sculpture</h3>
                     <p>instalation art proposal</p>
                 </div>
             </div>
             <div class="card">
-                <img src="Untitled_Artwork 29.png">
+                <img src="mosaic.jpg">
                 <div class="card-text">
                     <h3>Turn of The Century tiles</h3>
                 </div>
             </div>
             <div class="card">
-                <img src="raccoon.png">
+                <img src="raccoon.jpg">
                 <div class="card-text">
                     <h3>Faux Lino Raccoon Print</h3>
                 </div>
             </div>
             <div class="card">
-                <img src="magic frog.png">
+                <img src="magic frog.jpg">
                 <div class="card-text">
                     <h3>Frog Magic</h3>
                 </div>
